--- a/templates/views/layout.html
+++ b/templates/views/layout.html
@@ -30,6 +30,7 @@
 </script>
 <meta content="authenticity_token" name="csrf-param" />
 <meta content="38nor2qECU1f9Cx2ebxzXIv9OS2TTO23t8hm+Yo8bRw=" name="csrf-token" /></head>
+<link rel="stylesheet" href="/style.css">
 <body>
 <style>
   .pantry-brown-button{
@@ -425,522 +426,16 @@
   jQuery.extend( jQuery.fn.pickatime.defaults, {
     clear: '清除'
   });
-</script><div data='pantry_1514021245' id='pantry_code'></div>
-<div data='null' id='user-data'></div>
-<div data='zh' id='locale-name-data' style='display: none'></div>
-<div data='https://www.pantrysbest.com' id='server-url-data' style='display: none'></div>
-<div data='pop_city' id='is-show-popcity-data' style='display: none'></div>
-<div data='{"id":21386358,"created_at":"2017-12-23T17:25:59.863Z","updated_at":"2017-12-23T17:25:59.863Z","item_ids":[],"productsTotal":0.0,"utensilsTotal":0,"earliestDeliveryDate":null,"undeliverDate":{"1":[],"2":[],"3":[],"4":[]}}' id='shopping-cart-data'></div>
-<div data='{"id":1,"chinese_name":"北京"}' id='city-data'></div>
-<div data='2015/03/14 15:09:00' id='activity-start-at'></div>
-<div data='2015/04/02' id='activity-20150402-start'></div>
-<div data='2015/04/10' id='activity-20150402-end'></div>
-<div data='2015/07/07' id='activity-20150710-start'></div>
-<div data='2015/07/20' id='activity-20150710-end'></div>
-<div class='hidden-xs navbar navbar-default navbar-fixed-top navbar-static-top' role='navigation'>
-<div class='container' style='padding-right: 0px;padding-left: 0px;'>
-<div class='navbar-header'>
-<div class='navbar-brand'>
-<a href='/'><img alt="Pc%e7%ab%aflogo" src="/system/ad_images/pc_images/000/000/010/original/pc%E7%AB%AFlogo.png?1512129731" style="min-width: 205px;" /></a>
-<!-- /%a{href: "/"}= image_tag('logo-normal.png', style: "min-width: 205px;") -->
-</div>
-</div>
-<ul class='nav navbar-nav'>
-<li class='v2_locale_icon'>
-<a class='pc-locale-icon' href='/apis/set_current_locale?locale_name=en'>English</a>
-</li>
-<li class='dropdown'>
-<a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-<span class='hidden-sm'>当前城市：</span>
-北京
-<span class='caret'></span>
-</a>
-<ul class='dropdown-menu' role='menu'>
-<li>
-<a href='/cities/shanghai'>上海</a>
-</li>
-<li>
-<a href='/cities/tianjin'>天津</a>
-</li>
-<li>
-<a href='/cities/hangzhou'>杭州</a>
-</li>
-</ul>
-</li>
-</ul>
-<ul class='nav navbar-nav middle-nav-ul hidden-xs'>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li class='dropdown'>
-<a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-产品列表
-<span class='caret'></span>
-</a>
-<ul class='dropdown-menu' role='menu'>
-<li>
-<a href='/cities/beijing/categories/christmas-specials'>圣诞精选</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/cakes'>蛋糕</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/cupcakes'>纸杯蛋糕</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/gift-box'>礼盒</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/pies'>派</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/tartlets'>挞</a>
-</li>
-<li>
-<a href='/cities/beijing/categories/vegan'> 素食</a>
-</li>
-<li>
-<a href='/card'>礼品卡</a>
-</li>
-</ul>
-</li>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li>
-<a class='navbar-font-color' href='/stores'>门店</a>
-</li>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li>
-<a class='navbar-font-color' href='/events'>活动</a>
-</li>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li>
-<a class='navbar-font-color' href='/shop'>
-积分商城
-</a>
-</li>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li class='dropdown'>
-<a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-关于
-<span class='caret'></span>
-</a>
-<ul class='dropdown-menu' role='menu'>
-<li>
-<a href='/pages/huiyuan'>会员</a>
-</li>
-<li>
-<a href='/pages/lipinka'>礼品卡</a>
-</li>
-<li>
-<a href='/pages/bjdinggouxuzhi'>配送须知</a>
-</li>
-<li>
-<a href='/pages/paipai'>关于派悦坊</a>
-</li>
-<li>
-<a href='/pages/staff'>爱上派悦坊</a>
-</li>
-<li>
-<a href='/pages/recruit'>加入派悦坊</a>
-</li>
-</ul>
-</li>
-<li class='middle-nav-ul-li'>
-|
-</li>
-<li class='dropdown'>
-<a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-企业合作
-<span class='caret'></span>
-</a>
-<ul class='dropdown-menu' role='menu'>
-<li>
-<a href='/wedding'>甜品台</a>
-</li>
-<li>
-<a href='/free_tast'>企业试吃</a>
-</li>
-</ul>
-</li>
-</ul>
-<ul class='nav navbar-nav navbar-right pc-navbar-right hidden-xs'>
-<li id='sign-in-item'>
-<a href='/users/sign_in'>登录</a>
-</li>
-<li id='sign-up-item'>
-<a href='/users/sign_up'>注册</a>
-</li>
-<li id='shopping-cart-summary-nav'>
-<a class='navbar-font-color' href='/shopping-cart'>
-<i class="fa fa-shopping-cart"></i>
-</a>
-</li>
-</ul>
-</div>
+</script>
+{%include './navbar.html'%}
+
+
+{%block content%}
+{%endblock%}
 </div>
 
-<div class='navbar navbar-default navbar-static-top navbar-fixed-top visible-xs mobile-header-nav' role='navigation'>
-<div class='container' id='mobile-header-nav'>
-<div class='navbar-header'>
-<span id='toggle-mobile-dropdown-nav' style='width: 13%;text-align: left;'>
-<span class='fa fa-bars has-right-icon'>
-<div class='fa fa-circle red_right_icon red_nav_event'></div>
-</span>
-</span>
-<div class='navbar-brand' style='width: 74%;text-align: center;padding-left: 5px;padding-right: 5px;'>
-<a href='/'><img alt="%e6%89%8b%e6%9c%balogo" src="/system/ad_images/mobile_images/000/000/010/original/%E6%89%8B%E6%9C%BAlogo.png?1512128850" /></a>
-<!-- /%a{href: "/"}= image_tag('logo-mnormal.png') -->
-<a class='mb-locale-icon' href='/apis/set_current_locale?locale_name=en'>English</a>
-</div>
-<a class='toggle-mobile-telephone-nav visible-xs' href='tel:4008314159' style='width: 13%;text-align: right;'>
-<i class='fa fa-phone pantry-green-font'></i>
-</a>
-</div>
-<div class='container nav navbar-nav navbar-right' id='mobile-navbar-right'>
-<a class='col-xs-12 nav-list-city'>当前城市：北京</a>
-<a class='col-xs-4 nav-list-content' id='show-city-select-pop'>
-<img alt="Marker nav" src="https://www.pantrysbest.com/assets/nav/marker-nav-3a36f554aaea8089224ede8e028ba4f0.png" />
-<div>切换城市</div>
-</a>
-<a class='col-xs-4 nav-list-content' href='/crm'>
-<img alt="User nav" src="https://www.pantrysbest.com/assets/nav/user-nav-5f97c653a53d21ff4afa2e0c1ea180ec.png" />
-<div>个人中心</div>
-</a>
-<a class='col-xs-4 nav-list-content' href='/cities/beijing/categories/christmas-specials'>
-<img alt="Cake nav" src="https://www.pantrysbest.com/assets/nav/cake-nav-9e75ddec38a8e4ae4bb8e8087a86431f.png" />
-<div>产品列表</div>
-</a>
-<a class='col-xs-4 nav-list-content' href='/pages/huiyuan'>
-<img alt="Note nav" src="https://www.pantrysbest.com/assets/nav/note-nav-48b342e1312e1abfa776bd7c1bb70979.png" />
-<div>关于</div>
-</a>
-<a class='col-xs-4 nav-list-content' href='/events'>
-<span class='has-right-icon'>
-<img alt="Event nav" src="https://www.pantrysbest.com/assets/nav/event-nav-6f999683855a06ac92a9b6aa7b6fa0b8.png" />
-<div class='fa fa-circle red_right_icon red_nav_event'></div>
-</span>
-<div>活动</div>
-</a>
-<a class='col-xs-4 nav-list-content' href='/shop'>
-<img alt="Point nav" src="https://www.pantrysbest.com/assets/nav/point-nav-e83209c472251bfdfc33ef1f06e55b82.png" />
-<div>积分商城</div>
-</a>
-</div>
-</div>
-<div class='container pantry-height-5px'></div>
-<a href='/'>
-<div class='col-xs-2 mobile-nav-index div-20-width'>
-<div class='col-xs-12 no-padding'>
-<div class='nav-sup-new'>
-<img alt="Home current" class="nav-icon" src="https://www.pantrysbest.com/assets/nav/home-current-92b57084685a6cf178f40a522e4d076b.png" />
-</div>
-</div>
-</div>
-</a>
-<a href='/cities/beijing/categories/christmas-specials'>
-<div class='col-xs-2 mobile-nav-index div-20-width'>
-<div class='col-xs-12 no-padding'>
-<div class='nav-sup-new'>
-<img alt="Cake" class="nav-icon" src="https://www.pantrysbest.com/assets/nav/cake-f584ee933050cc29a5aa851816611d2d.png" />
-</div>
-</div>
-</div>
-</a>
-<a href='/crm'>
-<div class='col-xs-2 mobile-nav-index div-20-width'>
-<div class='col-xs-12 no-padding'>
-<div class='nav-sup-new'>
-<img alt="User" class="nav-icon v2-nav-icon" src="https://www.pantrysbest.com/assets/nav/user-06354e773e77095cc296c46f5a744ba2.png" />
-</div>
-</div>
-</div>
-</a>
-<a href='/wedding'>
-<div class='col-xs-2 mobile-nav-index div-20-width'>
-<div class='col-xs-12 no-padding'>
-<div class='nav-sup-new'>
-<img alt="Sell" class="nav-icon v2-nav-icon" src="https://www.pantrysbest.com/assets/nav/sell-8c0ce55e8475f125033989769f9ef369.png" />
-</div>
-</div>
-</div>
-</a>
-<a href='/shopping-cart'>
-<div class='col-xs-2 mobile-nav-index div-20-width'>
-<div class='col-xs-12 no-padding'>
-<div class='nav-sup-new'>
-<img alt="Cart" class="nav-icon v2-nav-icon" src="https://www.pantrysbest.com/assets/nav/cart-8c2932d2923fcc89bf4170680752098c.png" />
-</div>
-</div>
-</div>
-</a>
-
-</div><div class='hidden-xs' style='height: 50px;'></div>
-<div class='visible-xs' style='height: 100px;'></div>
-<div data='2015/08/05' id='activity-20150805-start'></div>
-<div data='2015/08/22' id='activity-20150805-end'></div>
-<div class='swiper-container pc-slideshows-swiper' id='front-page-carousel'>
-<div class='swiper-wrapper'>
-<div class='swiper-slide'>
-<a href='https://www.pantrysbest.com/events/christmas-ziti-huabei'>
-<img src='/system/city_slideshows/slide_images/000/000/881/original/%E5%8D%8E%E5%8C%97PC%E7%AB%AF.jpg?1513870436'>
-</a>
-</div>
-<div class='swiper-slide'>
-<a href=' https://www.pantrysbest.com/card'>
-<img src='/system/city_slideshows/slide_images/000/000/865/original/%E7%A4%BC%E5%93%81%E5%8D%A1pc%E7%AB%AF.jpg?1512392396'>
-</a>
-</div>
-<div class='swiper-slide'>
-<a href='/cities/beijing/categories/cakes/products/snow-top-mont-blanc-cake'>
-<img src='/system/city_slideshows/slide_images/000/000/801/original/%E8%BD%AE%E6%92%AD%E5%9B%BEPC%E7%AB%AF.jpg?1506055542'>
-</a>
-</div>
-</div>
-<div class='swiper-pagination pc-swiper-pagination'></div>
-</div>
-<div class='swiper-container mobile-slideshows-swiper' id='mobile-front-page-carousel'>
-<div class='swiper-wrapper'>
-<div class='swiper-slide'>
-<a href='https://www.pantrysbest.com/events/christmas-ziti-huabei'>
-<img src='/system/city_slideshows/slide_images/000/000/885/original/%E5%8D%8E%E5%8C%97%E6%89%8B%E6%9C%BA%E7%AB%AF.jpg?1513870516'>
-</a>
-</div>
-<div class='swiper-slide'>
-<a href=' https://www.pantrysbest.com/card'>
-<img src='/system/city_slideshows/slide_images/000/000/869/original/%E7%A4%BC%E5%93%81%E5%8D%A1%E8%BD%AE%E6%92%AD%E5%9B%BE%E6%89%8B%E6%9C%BA%E7%AB%AF.jpg?1512137726'>
-</a>
-</div>
-<div class='swiper-slide'>
-<a href='/cities/beijing/categories/cakes/products/snow-top-mont-blanc-cake'>
-<img src='/system/city_slideshows/slide_images/000/000/803/original/%E8%BD%AE%E6%92%AD%E5%9B%BE%E6%89%8B%E6%9C%BA%E7%AB%AF.jpg?1506055678'>
-</a>
-</div>
-</div>
-<div class='swiper-pagination mobile-swiper-pagination'></div>
-</div>
-<div class='container marketing center'>
-<div class='row'>
-<div class='front-page-header'>
-<span class='caret caret-right'></span>
-<b>
-<a class='pantry-green-title' href='/cities/beijing/categories/christmas-specials'>产品列表</a>
-</b>
-</div>
-</div>
-<div class='row'>
-<div class='col-md-15 col-sm-15 col-xs-6'>
-<div>
-<a class='has-img-icon' href='/cities/beijing/categories/christmas-specials'>
-<img alt='圣诞精选' class='img-responsive' src='/system/product_categories/images/000/000/007/original/%E9%A6%96%E9%A1%B5%E4%BA%A7%E5%93%81%E5%88%97%E8%A1%A8.jpg?1512266746'>
-<div class='img-icon new_img'>&nbsp;</div>
-
-</a>
-</div>
-<a class='product-category-link' href='/cities/beijing/categories/christmas-specials'>
-圣诞精选
-</a>
-</div>
-<div class='col-md-15 col-sm-15 col-xs-6'>
-<div>
-<a class='has-img-icon' href='/cities/beijing/categories/cakes'>
-<img alt='蛋糕' class='img-responsive' src='/system/product_categories/images/000/000/002/original/%E9%A6%96%E9%A1%B5%E4%BA%A7%E5%93%81%E5%88%97%E8%A1%A8.jpg?1513927354'>
-
-</a>
-</div>
-<a class='product-category-link' href='/cities/beijing/categories/cakes'>
-蛋糕
-</a>
-</div>
-<div class='col-md-15 col-sm-15 col-xs-6'>
-<div>
-<a class='has-img-icon' href='/cities/beijing/categories/gift-box'>
-<img alt='礼盒' class='img-responsive' src='/system/product_categories/images/000/000/016/original/%E7%A4%BC%E7%9B%92.jpg?1508379571'>
-
-</a>
-</div>
-<a class='product-category-link' href='/cities/beijing/categories/gift-box'>
-礼盒
-</a>
-</div>
-<div class='col-md-15 col-sm-15 col-xs-6'>
-<div>
-<a class='has-img-icon' href='/cities/beijing/categories/tartlets'>
-<img alt='挞' class='img-responsive' src='/system/product_categories/images/000/000/004/original/%E8%BF%B7%E4%BD%A0%E6%8C%9E.jpg?1501579655'>
-
-</a>
-</div>
-<a class='product-category-link' href='/cities/beijing/categories/tartlets'>
-挞
-</a>
-</div>
-<div class='col-md-15 col-sm-15 col-xs-6 hidden-xs'>
-<div>
-<a class='has-img-icon' href='/cities/beijing/categories/pies'>
-<img alt='派' class='img-responsive' src='/system/product_categories/images/000/000/003/original/%E8%8B%B9%E6%9E%9C%E6%B4%BE%E9%A6%96%E9%A1%B5%E4%BA%A7%E5%93%81%E5%88%97%E8%A1%A8.jpg?1506739734'>
-
-</a>
-</div>
-<a class='product-category-link' href='/cities/beijing/categories/pies'>
-派
-</a>
-</div>
-</div>
-</div>
-<div class='container marketing center'>
-<div class='row'>
-<div class='front-page-header'>
-<span class='caret caret-right'></span>
-<b class='pantry-green-title'>新品推荐</b>
-</div>
-</div>
-<div class='row'>
-<div class='col-md-3 col-sm-3 col-xs-6'>
-<div class='front-page-product-set-image-container'>
-<a class='has-img-icon' href='/cities/beijing/categories/christmas-specials/products/Christmas-cabin-cake'>
-<img alt='惊叹雪房子蛋糕' class='img-responsive' src='/system/product_sets/front_page_images/000/000/202/original/%E9%A6%96%E9%A1%B5%E6%96%B0%E5%93%81%E6%8E%A8%E8%8D%90.jpg?1512013136'>
-<div class='img-icon new_img'>&nbsp;</div>
-
-</a>
-<form accept-charset="UTF-8" action="/shopping-cart" class="front-page-cart-form hidden-xs" data-remote="true" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /></div>
-<input name='authenticity_token' type='hidden' value='38nor2qECU1f9Cx2ebxzXIv9OS2TTO23t8hm+Yo8bRw='>
-<input name='product_id' type='hidden' value='1010'>
-<input class='shopping-cart-button' type='submit' value=''>
-</form>
-
-</div>
-<div class='chinese-name'>
-<a href='/cities/beijing/categories/christmas-specials/products/Christmas-cabin-cake'>
-<h2 class='product-set-link'>惊叹雪房子蛋糕</h2>
-</a>
-<span class='size-and-price'>
-6吋
-￥399
-</span>
-</div>
-</div>
-<div class='col-md-3 col-sm-3 col-xs-6'>
-<div class='front-page-product-set-image-container'>
-<a class='has-img-icon' href='/cities/beijing/categories/christmas-specials/products/snowman-surprise-cake'>
-<img alt='惊叹雪人蛋糕' class='img-responsive' src='/system/product_sets/front_page_images/000/000/087/original/%E9%A6%96%E9%A1%B5%E6%96%B0%E5%93%81%E6%8E%A8%E8%8D%90%EF%BC%8D%E9%9B%AA%E4%BA%BA.jpg?1513652762'>
-<div class='img-icon new_img'>&nbsp;</div>
-
-</a>
-<form accept-charset="UTF-8" action="/shopping-cart" class="front-page-cart-form hidden-xs" data-remote="true" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /></div>
-<input name='authenticity_token' type='hidden' value='38nor2qECU1f9Cx2ebxzXIv9OS2TTO23t8hm+Yo8bRw='>
-<input name='product_id' type='hidden' value='436'>
-<input class='shopping-cart-button' type='submit' value=''>
-</form>
-
-</div>
-<div class='chinese-name'>
-<a href='/cities/beijing/categories/christmas-specials/products/snowman-surprise-cake'>
-<h2 class='product-set-link'>惊叹雪人蛋糕</h2>
-</a>
-<span class='size-and-price'>
-6吋
-￥399
-</span>
-</div>
-</div>
-<div class='col-md-3 col-sm-3 col-xs-6'>
-<div class='front-page-product-set-image-container'>
-<a class='has-img-icon' href='/cities/beijing/categories/christmas-specials/products/christmas-cupcake-set'>
-<img alt='冬日团宠精灵中号纸杯蛋糕礼盒' class='img-responsive' src='/system/product_sets/front_page_images/000/000/198/original/%E9%A6%96%E9%A1%B5%E6%96%B0%E5%93%81%E6%8E%A8%E8%8D%90.jpg?1511354426'>
-<div class='img-icon new_img'>&nbsp;</div>
-
-</a>
-<form accept-charset="UTF-8" action="/shopping-cart" class="front-page-cart-form hidden-xs" data-remote="true" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /></div>
-<input name='authenticity_token' type='hidden' value='38nor2qECU1f9Cx2ebxzXIv9OS2TTO23t8hm+Yo8bRw='>
-<input name='product_id' type='hidden' value='1005'>
-<input class='shopping-cart-button' type='submit' value=''>
-</form>
-
-</div>
-<div class='chinese-name'>
-<a href='/cities/beijing/categories/christmas-specials/products/christmas-cupcake-set'>
-<h2 class='product-set-link'>冬日团宠精灵中号纸杯蛋糕礼盒</h2>
-</a>
-<span class='size-and-price'>
-礼盒
-￥199
-</span>
-</div>
-</div>
-<div class='col-md-3 col-sm-3 col-xs-6'>
-<div class='front-page-product-set-image-container'>
-<a class='has-img-icon' href='/card'>
-<img alt="%e9%a6%96%e9%a1%b5%e6%96%b0%e5%93%81%e6%8e%a8%e8%8d%90" class="img-responsive" src="/system/ad_images/pc_images/000/000/015/original/%E9%A6%96%E9%A1%B5%E6%96%B0%E5%93%81%E6%8E%A8%E8%8D%90.png?1513929619" />
-</a>
-</div>
-<div class='chinese-name'>
-<a href='/card'>
-<h2 class='product-set-link'>电子礼品卡</h2>
-</a>
-</div>
-</div>
-</div>
-</div>
-<script>
-  $(document).ready(function(){
-    Pantrysbest.SwiperPantry.init();
-  });
-</script><div class='pop_city_select' id='set_current_city'>
-<div class='hidden-xs col-md-4 col-sm-4 content_left'>
-<img alt="Logo" class="img-responsive" src="https://www.pantrysbest.com/assets/logo-90809b5a5c952f24ea2c5fb65319cbf1.png" />
-<img alt="Brand icons" class="img-responsive" src="https://www.pantrysbest.com/assets/brand-icons-b7a42d80596318922d6f6fb848166249.png" />
-</div>
-<div class='hidden-xs col-md-8 col-sm-8 content_right'>
-<div class='title'>WELCOME</div>
-<div class='cont'>欢迎来到派悦坊</div>
-<p>目前我们提供以下城市的配送服务，请根据您的收货地址选择：</p>
-<div class='pc-content col-md-12 col-sm-12 pantry-padding-0px'>
-<div class='col-md-3 col-sm-3 city_list pc-currnet-city' data='beijing'>
-<div class='btn city_select current_city'>北京</div>
-</div>
-<div class='col-md-3 col-sm-3 city_list pc-currnet-city' data='shanghai'>
-<div class='btn city_select'>上海</div>
-</div>
-<div class='col-md-3 col-sm-3 city_list pc-currnet-city' data='tianjin'>
-<div class='btn city_select'>天津</div>
-</div>
-<div class='col-md-3 col-sm-3 city_list pc-currnet-city' data='hangzhou'>
-<div class='btn city_select'>杭州</div>
-</div>
-</div>
-</div>
-<div class='visible-xs content_title'>
-<span class='fa fa-map-marker'></span>
-请选择您的收货地址
-</div>
-<div class='visible-xs content row'>
-<div class='col-xs-3 city_list'>
-<div class='btn city_select current_city' data='beijing'>北京</div>
-</div>
-<div class='col-xs-3 city_list'>
-<div class='btn city_select' data='shanghai'>上海</div>
-</div>
-<div class='col-xs-3 city_list'>
-<div class='btn city_select' data='tianjin'>天津</div>
-</div>
-<div class='col-xs-3 city_list'>
-<div class='btn city_select' data='hangzhou'>杭州</div>
-</div>
-</div>
-<div class='visible-xs content_footer'>
-<div class='btn setup_current_city' id='mobile_setup_current_city'>开始购物</div>
-</div>
-<div class='close-pop' id='close-city-select-pop'>
-<span class='fa fa-times-circle-o'></span>
-</div>
-</div><div style='height: 35px'></div>
+<!-- 
+<div style='height: 35px'></div>
 <div class='footer text-muted'>
 <div class='container footer-container'>
 <div class='row'>
@@ -985,10 +480,7 @@ Copyright 2010-2017 派悦坊，Ltd 京ICP备12046340
 <div style='height: 20px'></div><div aria-hidden='true' aria-labelledby='myModalLabel' class='modal fade' id='login-modal' role='dialog' tabindex='-1'>
 <div class='modal-dialog'>
 <div class='modal-content'></div>
-</div>
-{%block content%}
-{%endblock%}
-</div>
+</div> -->
 <!-- / baidu统计的代码 -->
 <script>
   (function() {
